<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memo_to_do"
        android:textStyle="bold"
        android:textSize="60sp"
        android:textColor="@color/title"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_centerVertical="true"
        android:layout_marginTop="150dp"
        android:layout_marginHorizontal="20sp">

        <EditText
            android:id="@+id/email_sign_in"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/oval_shape"
            android:hint="@string/email"
            android:elevation="10dp"
            android:padding="20dp"
            android:textColor="@color/text"
            android:autofillHints=""
            android:textColorHint="@color/text"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_email"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/password_sign_in"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:layout_below="@+id/email_sign_in"
            android:background="@drawable/oval_shape"
            android:hint="@string/password"
            android:elevation="10dp"
            android:padding="20dp"
            android:textColor="@color/text"
            android:autofillHints=""
            android:textColorHint="@color/text"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_sign_in"
            android:layout_margin="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/forgot_password"
            android:textSize="15sp"
            android:textColor="@color/title"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/forgot_password"
            android:layout_marginTop="50dp"
            android:background="@drawable/oval_shape"
            android:textStyle="bold"
            android:text="@string/login"
            android:textColor="@color/text"
            android:elevation="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp">

            <TextView
                android:id="@+id/not_registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/title"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/sign_up_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/title"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>