<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsActivity"
    android:background="@color/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_background"
        android:elevation="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_settings"
        android:layout_margin="10dp"
        android:padding="20sp"
        android:background="@drawable/oval_shape">

        <TextView
            android:id="@+id/appTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/text"
            android:text="@string/app_theme"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appTheme"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/lightMode"
                android:buttonTint="@color/radioButtonTint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="NightModeOFF"
                android:textColor="@color/text"
                android:text="@string/light_mode"/>

            <RadioButton
                android:id="@+id/darkMode"
                android:buttonTint="@color/radioButtonTint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="NightModeON"
                android:textColor="@color/text"
                android:text="@string/dark_mode"/>

            <RadioButton
                android:id="@+id/batterySaver"
                android:buttonTint="@color/radioButtonTint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:text="@string/according_to_battery_saver"/>

            <RadioButton
                android:id="@+id/systemDefault"
                android:buttonTint="@color/radioButtonTint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="NightModeSystemDefault"
                android:textColor="@color/text"
                android:text="@string/system_default"/>

        </RadioGroup>

    </RelativeLayout>

</RelativeLayout>