<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layout_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_note"
        android:elevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_background"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:targetApi="lollipop">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/memo_to_do"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/trans"
                android:textColor="@color/text"
                android:text="@string/save"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar_note"
        android:layout_above="@+id/bottom_toolbar">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/oval_shape"
            android:textColor="@color/text"
            android:textColorHint="@color/hint_text_color"
            android:hint="@string/title"
            android:inputType="textCapSentences"
            android:maxLength="50"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:singleLine="true"
            android:textSize="30sp"
            android:textStyle="bold"

            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/oval_shape"
            android:textColor="@color/text"
            android:textColorHint="@color/hint_text_color"
            android:gravity="start"
            android:hint="@string/note"
            android:inputType="textCapSentences|textMultiLine"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:scrollbars="vertical"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

    </LinearLayout>


</RelativeLayout>