<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProfileActivity"
    android:background="@color/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_profile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_background"
        android:elevation="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_profile"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/profile_name_tv"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/name"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/profile_name"
            android:layout_toRightOf="@+id/profile_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:layout_toEndOf="@+id/profile_name_tv" />

        <TextView
            android:id="@+id/profile_email_tv"
            android:layout_below="@+id/profile_name_tv"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:padding="10dp"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/profile_email"
            android:layout_below="@+id/profile_name"
            android:layout_toRightOf="@+id/profile_email_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/text"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/profile_password_tv"
            android:layout_below="@+id/profile_email_tv"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/password"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/profile_password"
            android:layout_below="@+id/profile_email_tv"
            android:layout_toRightOf="@+id/profile_password_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/text"
            android:textSize="20sp"/>

    </RelativeLayout>

</RelativeLayout>